Launch non-steam games