@@ -22,7 +22,7 @@ dependencies {
     implementation("com.formdev:flatlaf-intellij-themes:3.7")
     implementation("com.google.code.gson:gson:2.10.1")
     implementation("net.harawata:appdirs:1.5.0")
-    implementation("ch.qos.logback:logback-classic:1.5.6")
+    implementation("ch.qos.logback:logback-classic:1.5.37")
     implementation("com.formdev:svgSalamander:1.1.4")
     implementation("org.yaml:snakeyaml:2.2")
 }
@@ -61,10 +61,6 @@ val compileNative by tasks.registering {
 
 tasks.withType<JavaCompile>().configureEach {
     options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType<Test>().configureEach {
-    jvmArgs("--enable-preview")
 }
 
 tasks.withType<JavaExec>().configureEach {
